--- a/src/app/admin/features/channel_setting/Reports/history-reports/history-reports.component.html
+++ b/src/app/admin/features/channel_setting/Reports/history-reports/history-reports.component.html
@@ -1,3 +1,4 @@
+<h4>HISTORY REPORTS</h4>
 <section>
   <mat-accordion class="example-headers-align">
     <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
