--- a/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
+++ b/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
@@ -1,3 +1,4 @@
+<h4>Trai Reports</h4>
 <!-- ------------------------------PACKAGE BASED REPORT---------------------------------------------- -->
 <section>
     <mat-accordion class="example-headers-align">
