--- a/src/app/admin/features/home/home.component.html
+++ b/src/app/admin/features/home/home.component.html
@@ -1,19 +1,19 @@
 <section class="content1">
     <div class="row g-6 mb-6">
-        <div class="col-xl-7 col-sm-6 col-12">
+        <!-- <div class="col-xl-7 col-sm-6 col-12">
             <div class="card">
                 <div class="card-body">
                     <div class="row">
                         <div class="col">
                             <app-stb-chart></app-stb-chart>
-                            <!-- jkjhk -->
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
+        
 
-        <div class="col-xl-5 col-sm-6 col-12">
+        <div class="col-xl-6 col-sm-6 col-12">
             <div class="card">
                 <div class="card-body">
                     <div class="row">
@@ -25,26 +25,34 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="row g-6 mb-6">
-
-        <div class="col-xl-5 col-sm-6 col-12">
+        <div class="col-xl-6 col-sm-6 col-12">
             <div class="card">
-           
                 <div class="card-body">
                     <div class="row">
                         <div class="col">
                             <app-package-chart></app-package-chart>
-                            <!-- <app-pakage-chart></app-pakage-chart> -->
-                            <!-- hkhkihkj -->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="col-xl-7 col-sm-6 col-12">
+    <div class="row g-6 mb-6">
+
+        <!-- <div class="col-xl-5 col-sm-6 col-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col">
+                            <app-package-chart></app-package-chart>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+
+        <div class="col-xl-12 col-sm-12 col-12">
             <div class="card">
                 <div class="card-body">
                     <div class="row">
