--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -33,7 +33,7 @@
                 <li><a (click)="navgetToUrl('/home');setActiveLinkTab($event)" class="active"> <i
                             class='bx bx-sm bxs-dashboard icon'></i> &nbsp;
                         Dashboard</a></li>
-                <li><a (click)="navgetToUrl('/top_sub_detail');setActiveLinkTab($event)"><i
+                <li><a (click)="navgetToUrl('/top_subscription');setActiveLinkTab($event)"><i
                             class='bx bx-table bx-sm icon'></i> &nbsp;Top Subscription Details</a></li>
             </ul>
         </li>
