--- a/src/app/_core/charts/package-chart/package-chart.component.html
+++ b/src/app/_core/charts/package-chart/package-chart.component.html
@@ -3,9 +3,11 @@
 </div> -->
 
 <div>
-    <div style="padding: 1.5rem;">
+    <div>
         <h6 style="color:rgb(31, 30, 30);font-size: 20px;font-weight: 600;text-align: center;font-family:sans-serif;">PACKAGE DETAILS</h6>
     </div>
-    <!-- <div class="line"></div> -->
-    <div id="packagechartContainer" style="height: 360px; width: 100%;"></div>
+    <div id="packagechartContainer" style="height: 340px; width: 100%;"></div>
 </div>
+<!-- <div>
+    <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>    
+  </div>   -->
